Remove justify-content center from index-ad-content selector. Fixes alignment of pics

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -25,7 +25,6 @@
 .index-ad-content {
   display: flex;
   align-items: center;
-  justify-content: center;
 }
 
 .index-ad-desc {
